--- a/index.html
+++ b/index.html
@@ -20,7 +20,14 @@
         <img src="Imagens/sett.jpg" alt="Herói 6" draggable="true" class="draggable">
         <img src="Imagens/mcqueen.jpg" alt="Herói 7" draggable="true" class="draggable">
         <img src="Imagens/cj.png" alt="Herói 8" draggable="true" class="draggable">
-
+        <img src="Imagens/josuke.jpg" alt="Herói 8" draggable="true" class="draggable">
+        <img src="Imagens/kaiju.jpg" alt="Herói 8" draggable="true" class="draggable">
+        <img src="Imagens/deadpool.jpg" alt="Herói 8" draggable="true" class="draggable">
+        <img src="Imagens/cavaleiro.jpg" alt="Herói 8" draggable="true" class="draggable">
+        <img src="Imagens/godzilla.jpg" alt="Herói 8" draggable="true" class="draggable">
+        <img src="Imagens/max.jpg" alt="Herói 8" draggable="true" class="draggable">
+        <img src="Imagens/sonic.jpg" alt="Herói 8" draggable="true" class="draggable">
+      
       </div>
     </div>
   </div>
