adição de mais imagens

--- a/index.html
+++ b/index.html
@@ -34,7 +34,16 @@
           <img src="Imagens/kratos.jpg" alt="Herói 18" draggable="true" class="draggable">
           <img src="Imagens/carlos.jpg" alt="Herói 18" draggable="true" class="draggable">
           <img src="Imagens/doom.jpg" alt="Herói 18" draggable="true" class="draggable">
-         
+          <img src="Imagens/spider.jpg" alt="Herói 18" draggable="true" class="draggable">
+          <img src="Imagens/raiden.webp" alt="Herói 18" draggable="true" class="draggable">
+          <img src="Imagens/samuel.jpg" alt="Herói 18" draggable="true" class="draggable">
+          <img src="Imagens/Freddy.webp" alt="Herói 18" draggable="true" class="draggable">
+          <img src="Imagens/shadow.jpg" alt="Herói 18" draggable="true" class="draggable">
+          <img src="Imagens/ghostface.jpg" alt="Herói 18" draggable="true" class="draggable">
+          <img src="Imagens/steve.jpg" alt="Herói 18" draggable="true" class="draggable">
+          <img src="Imagens/scorpion.jpg" alt="Herói 18" draggable="true" class="draggable">
+          <img src="Imagens/dio.png" alt="Herói 18" draggable="true" class="draggable">
+        
         </div>
       </div>
     </div>
