Adição de mais imagens

--- a/index.html
+++ b/index.html
@@ -32,17 +32,23 @@
           <img src="Imagens/chester.jpg" alt="Herói 16" draggable="true" class="draggable">
           <img src="Imagens/geralt.jpg" alt="Herói 17" draggable="true" class="draggable">
           <img src="Imagens/kratos.jpg" alt="Herói 18" draggable="true" class="draggable">
-          <img src="Imagens/carlos.jpg" alt="Herói 18" draggable="true" class="draggable">
-          <img src="Imagens/doom.jpg" alt="Herói 18" draggable="true" class="draggable">
-          <img src="Imagens/spider.jpg" alt="Herói 18" draggable="true" class="draggable">
-          <img src="Imagens/raiden.webp" alt="Herói 18" draggable="true" class="draggable">
-          <img src="Imagens/samuel.jpg" alt="Herói 18" draggable="true" class="draggable">
-          <img src="Imagens/Freddy.webp" alt="Herói 18" draggable="true" class="draggable">
-          <img src="Imagens/shadow.jpg" alt="Herói 18" draggable="true" class="draggable">
-          <img src="Imagens/ghostface.jpg" alt="Herói 18" draggable="true" class="draggable">
-          <img src="Imagens/steve.jpg" alt="Herói 18" draggable="true" class="draggable">
-          <img src="Imagens/scorpion.jpg" alt="Herói 18" draggable="true" class="draggable">
-          <img src="Imagens/dio.png" alt="Herói 18" draggable="true" class="draggable">
+          <img src="Imagens/carlos.jpg" alt="Herói 19" draggable="true" class="draggable">
+          <img src="Imagens/doom.jpg" alt="Herói 20" draggable="true" class="draggable">
+          <img src="Imagens/spider.jpg" alt="Herói 21" draggable="true" class="draggable">
+          <img src="Imagens/raiden.webp" alt="Herói 22" draggable="true" class="draggable">
+          <img src="Imagens/samuel.jpg" alt="Herói 23" draggable="true" class="draggable">
+          <img src="Imagens/Freddy.webp" alt="Herói 24" draggable="true" class="draggable">
+          <img src="Imagens/shadow.jpg" alt="Herói 25" draggable="true" class="draggable">
+          <img src="Imagens/ghostface.jpg" alt="Herói 26" draggable="true" class="draggable">
+          <img src="Imagens/steve.jpg" alt="Herói 27" draggable="true" class="draggable">
+          <img src="Imagens/scorpion.jpg" alt="Herói 28" draggable="true" class="draggable">
+          <img src="Imagens/dio.png" alt="Herói 29" draggable="true" class="draggable">
+          <img src="Imagens/morte.webp" alt="Herói 30" draggable="true" class="draggable">
+          <img src="Imagens/tai lung.png" alt="Herói 31" draggable="true" class="draggable">
+          <img src="Imagens/megamind.jpg" alt="Herói 32" draggable="true" class="draggable">
+          <img src="Imagens/venom.jpg" alt="Herói 33" draggable="true" class="draggable">
+          <img src="Imagens/jonesy.jpg" alt="Herói 33" draggable="true" class="draggable">
+          <img src="Imagens/diego.jpg" alt="Herói 33" draggable="true" class="draggable">
         
         </div>
       </div>
