--- a/index.html
+++ b/index.html
@@ -14,47 +14,56 @@
       <h2>Caras Maneiros 😎</h2>
       <div class="galeria" id="galeria">
         <div class="imagens">
-          <img src="Imagens/dante.jpg" alt="Herói 1" draggable="true" class="draggable">
-          <img src="Imagens/vergil.jpeg" alt="Herói 2" draggable="true" class="draggable">
-          <img src="Imagens/cage.jpg" alt="Herói 3" draggable="true" class="draggable">
-          <img src="Imagens/charlie.jpg" alt="Herói 4" draggable="true" class="draggable">
-          <img src="Imagens/jimmy.webp" alt="Herói 5" draggable="true" class="draggable">
-          <img src="Imagens/sett.jpg" alt="Herói 6" draggable="true" class="draggable">
-          <img src="Imagens/mcqueen.jpg" alt="Herói 7" draggable="true" class="draggable">
-          <img src="Imagens/cj.png" alt="Herói 8" draggable="true" class="draggable">
-          <img src="Imagens/josuke.jpg" alt="Herói 9" draggable="true" class="draggable">
-          <img src="Imagens/kaiju.jpg" alt="Herói 10" draggable="true" class="draggable">
-          <img src="Imagens/deadpool.jpg" alt="Herói 11" draggable="true" class="draggable">
-          <img src="Imagens/cavaleiro.jpg" alt="Herói 12" draggable="true" class="draggable">
-          <img src="Imagens/godzilla.jpg" alt="Herói 13" draggable="true" class="draggable">
-          <img src="Imagens/max.jpg" alt="Herói 14" draggable="true" class="draggable">
-          <img src="Imagens/sonic.jpg" alt="Herói 15" draggable="true" class="draggable">
-          <img src="Imagens/chester.jpg" alt="Herói 16" draggable="true" class="draggable">
-          <img src="Imagens/geralt.jpg" alt="Herói 17" draggable="true" class="draggable">
-          <img src="Imagens/kratos.jpg" alt="Herói 18" draggable="true" class="draggable">
-          <img src="Imagens/carlos.jpg" alt="Herói 19" draggable="true" class="draggable">
-          <img src="Imagens/doom.jpg" alt="Herói 20" draggable="true" class="draggable">
-          <img src="Imagens/spider.jpg" alt="Herói 21" draggable="true" class="draggable">
-          <img src="Imagens/raiden.webp" alt="Herói 22" draggable="true" class="draggable">
-          <img src="Imagens/samuel.jpg" alt="Herói 23" draggable="true" class="draggable">
-          <img src="Imagens/Freddy.webp" alt="Herói 24" draggable="true" class="draggable">
-          <img src="Imagens/shadow.jpg" alt="Herói 25" draggable="true" class="draggable">
-          <img src="Imagens/ghostface.jpg" alt="Herói 26" draggable="true" class="draggable">
-          <img src="Imagens/steve.jpg" alt="Herói 27" draggable="true" class="draggable">
-          <img src="Imagens/scorpion.jpg" alt="Herói 28" draggable="true" class="draggable">
-          <img src="Imagens/dio.png" alt="Herói 29" draggable="true" class="draggable">
-          <img src="Imagens/morte.webp" alt="Herói 30" draggable="true" class="draggable">
-          <img src="Imagens/tai lung.png" alt="Herói 31" draggable="true" class="draggable">
-          <img src="Imagens/megamind.jpg" alt="Herói 32" draggable="true" class="draggable">
-          <img src="Imagens/venom.jpg" alt="Herói 33" draggable="true" class="draggable">
-          <img src="Imagens/jonesy.jpg" alt="Herói 33" draggable="true" class="draggable">
-          <img src="Imagens/diego.jpg" alt="Herói 33" draggable="true" class="draggable">
-        
+          <img src="Imagens/dante.jpg" alt="Dante(dmc)" draggable="true" class="draggable">
+          <img src="Imagens/vergil.jpeg" alt="Vergil(dmc)" draggable="true" class="draggable">
+          <img src="Imagens/cage.jpg" alt="JohnnyCage(mk)" draggable="true" class="draggable">
+          <img src="Imagens/charlie.jpg" alt="Charlie(sf)" draggable="true" class="draggable">
+          <img src="Imagens/jimmy.webp" alt="Jimmy(bully)" draggable="true" class="draggable">
+          <img src="Imagens/sett.jpg" alt="Sett(lol)" draggable="true" class="draggable">
+          <img src="Imagens/mcqueen.jpg" alt="McQueen(cars)" draggable="true" class="draggable">
+          <img src="Imagens/cj.png" alt="CJ(GTA)" draggable="true" class="draggable">
+          <img src="Imagens/josuke.jpg" alt="Josuke(jojo)" draggable="true" class="draggable">
+          <img src="Imagens/kaiju.jpg" alt="KaijuN°8(kaijuN°8)" draggable="true" class="draggable">
+          <img src="Imagens/deadpool.jpg" alt="Deadpool(marvel)" draggable="true" class="draggable">
+          <img src="Imagens/cavaleiro.jpg" alt="MoonKnight(marvel)" draggable="true" class="draggable">
+          <img src="Imagens/godzilla.jpg" alt="Godzilla(godzilla)" draggable="true" class="draggable">
+          <img src="Imagens/max.jpg" alt="MaxVerstappen(f1)" draggable="true" class="draggable">
+          <img src="Imagens/sonic.jpg" alt="Sonic(sonic)" draggable="true" class="draggable">
+          <img src="Imagens/chester.jpg" alt="Chester(lp)" draggable="true" class="draggable">
+          <img src="Imagens/geralt.jpg" alt="Geralt(tw)" draggable="true" class="draggable">
+          <img src="Imagens/kratos.jpg" alt="Kratos(gow)" draggable="true" class="draggable">
+          <img src="Imagens/carlos.jpg" alt="CARLOS" draggable="true" class="draggable">
+          <img src="Imagens/doom.jpg" alt="DoomSlayer(doom)" draggable="true" class="draggable">
+          <img src="Imagens/spider.jpg" alt="SpiderMan(marvel)" draggable="true" class="draggable">
+          <img src="Imagens/raiden.webp" alt="Raiden(mgrr)" draggable="true" class="draggable">
+          <img src="Imagens/samuel.jpg" alt="JetStreamSam(mgrr)" draggable="true" class="draggable">
+          <img src="Imagens/Freddy.webp" alt="Freddy(fnaf)" draggable="true" class="draggable">
+          <img src="Imagens/shadow.jpg" alt="Shadow(sonic)" draggable="true" class="draggable">
+          <img src="Imagens/ghostface.jpg" alt="Ghostface(Scream)" draggable="true" class="draggable">
+          <img src="Imagens/steve.jpg" alt="Steve(mine)" draggable="true" class="draggable">
+          <img src="Imagens/scorpion.jpg" alt="Scorpion(mk)" draggable="true" class="draggable">
+          <img src="Imagens/dio.png" alt="Dio(jojo)" draggable="true" class="draggable">
+          <img src="Imagens/morte.webp" alt="Death(pib)" draggable="true" class="draggable">
+          <img src="Imagens/tai lung.png" alt="TaiLung(kfp)" draggable="true" class="draggable">
+          <img src="Imagens/megamind.jpg" alt="Megamind(megamind)" draggable="true" class="draggable">
+          <img src="Imagens/venom.jpg" alt="Venom(marvel)" draggable="true" class="draggable">
+          <img src="Imagens/jonesy.jpg" alt="Jonesy(fortnite)" draggable="true" class="draggable">
+          <img src="Imagens/diego.jpg" alt="Diego(ia)" draggable="true" class="draggable">
+          <img src="Imagens/mark.jpg" alt="MarkGrayson(invincible)" draggable="true" class="draggable">        
+          <img src="Imagens/URF.jpg" alt="FocaURF(lol)" draggable="true" class="draggable">        
+          <img src="Imagens/MasterChief.jpg" alt="MasterChief(halo)" draggable="true" class="draggable">        
+          <img src="Imagens/leon.jpg" alt="Leon(re)" draggable="true" class="draggable">        
+          <img src="Imagens/Nolan.jpg" alt="Omni-man(invincible)" draggable="true" class="draggable">        
+          <img src="Imagens/ironMan.jpg" alt="IronMan(marvel)" draggable="true" class="draggable">        
+          <img src="Imagens/pussInBoots.jpg" alt="PussInBoots(pib)" draggable="true" class="draggable">        
+          <img src="Imagens/FredDurst.jpg" alt="FredDurst(lb)" draggable="true" class="draggable">        
+          <img src="Imagens/ozzyOsbourne.jpg" alt="OzzyOsbourne(bs)" draggable="true" class="draggable">        
+          <img src="Imagens/OliverSykes.jpg" alt="OliverSykes(bmth)" draggable="true" class="draggable">        
+ 
         </div>
       </div>
     </div>
 
-    <!-- Coluna 2: Favoritos e Odiados -->
     <div class="lado-direito">
       <div class="container">
         <h2>Favoritos 🤙</h2>
